--- a/licensingservice-dev.yml
+++ b/licensingservice-dev.yml
@@ -1,9 +1,9 @@
 ---
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
+# management:
+#   endpoints:
+#     web:
+#       exposure:
+#         include: "*"
 spring:
   jpa:
     show-sql: "true"
