--- a/organizationservice-dev.yml
+++ b/organizationservice-dev.yml
@@ -1,1 +1,23 @@
 
+---
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+spring:
+  jpa:
+    show-sql: "true"
+tracer:
+  property: "I AM THE Dev"
+
+my:
+  value: " org  DEV"
+eureka:
+  instance:
+    preferIpAddress: true
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+  serviceUrl:
+    defaultZone: http://localhost:8761/eureka/  
